--- a/app/index.html
+++ b/app/index.html
@@ -16,24 +16,24 @@ current: index
 <section class="profession">
   <div class="container">
     <h2>用專業的心，做專業的事</h2>
-    <ul>
-      <li class="item">
-        <img src="./assets/images/home-section2-1.png" alt="">
+    <ul class="profession-group">
+      <li class="profession-block">
+        <img src="./assets/images/home-section2-1.png" alt="single price">
         <h3>單一價格</h3>
         <p>無論任何度數皆不需追加費用即可擁有適合自己的薄型球面鏡片。</p>
       </li>
-      <li class="item">
-        <img src="./assets/images/home-section2-2.png" alt="">
+      <li class="profession-block">
+        <img src="./assets/images/home-section2-2.png" alt="express pickup">
         <h3>20 分鐘即可取件</h3>
         <p>為了您的寶貴時間著想，以豐富專業知識與技術將結帳到交件的時間縮減至最快 20 分鐘即可完成。</p>
       </li>
-      <li class="item">
-        <img src="./assets/images/home-section2-3.png" alt="">
+      <li class="profession-block">
+        <img src="./assets/images/home-section2-3.png" alt="sales service">
         <h3>安心售後服務</h3>
         <p>我們提供長達 120 天的保固售後服務，不限會員資格皆享有免費深層保養及專業維修服務。</p>
       </li>
-      <li class="item">
-        <img src="./assets/images/home-sectioin2-4.png" alt="">
+      <li class="profession-block">
+        <img src="./assets/images/home-sectioin2-4.png" alt="about lenses">
         <h3>關於鏡片</h3>
         <p>使用世界知名頂級品牌，抗UV、防汙鍍膜薄型非球面鏡片。</p>
       </li>
@@ -44,17 +44,17 @@ current: index
 <section class="classic">
   <div class="container">
     <h2>經典系列鏡框</h2>
-    <ul>
-      <li>
-        <img src="./assets/images/home-section3-1.png" alt="">
+    <ul class="classic-group">
+      <li class="classic-block">
+        <img src="./assets/images/home-section3-1.png" alt="optical">
         <p>OPTICAL</p>
       </li>
-      <li>
-        <img src="./assets/images/home-section3-2.png" alt="">
+      <li class="classic-block">
+        <img src="./assets/images/home-section3-2.png" alt="sunglasses">
         <p>SUNGLASSES</p>
       </li>
-      <li>
-        <img src="./assets/images/home-section3-3.png" alt="">
+      <li class="classic-block">
+        <img src="./assets/images/home-section3-3.png" alt="functional">
         <p>FUNCTIONAL</p>
       </li>
     </ul>
@@ -64,13 +64,13 @@ current: index
 <section class="joint">
   <div class="container">
     <h2>聯名設計鏡框</h2>
-    <ul>
-      <li>
-        <img src="./assets/images/home-section4-1.png" alt="">
+    <ul class="joint-group">
+      <li class="joint-block">
+        <div class="joint-block-1"></div>
         <p>DOUBLE A+</p>
       </li>
-      <li>
-        <img src="./assets/images/home-section4-2.png" alt="">
+      <li class="joint-block">
+        <div class="joint-block-2"></div>
         <p>YOUTH A+</p>
       </li>
     </ul>
@@ -80,9 +80,9 @@ current: index
 <section class="customer">
   <div class="container">
     <h2>顧客推薦</h2>
-    <ul>
-      <li>
-        <img src="./assets/images/home-section5-1.png" alt="">
+    <ul class="customer-group">
+      <li class="customer-block">
+        <img src="./assets/images/home-section5-1.png" alt="Jessy">
         <div class="card-body">
           <div class="top">
             <h4>Jessy</h4>
@@ -91,8 +91,8 @@ current: index
           <span>2021/06/20</span>
         </div>
       </li>
-      <li>
-        <img src="./assets/images/home-section5-2.png" alt="">
+      <li class="customer-block">
+        <img src="./assets/images/home-section5-2.png" alt="凱倫">
         <div class="card-body">
           <div class="top">
             <h4>凱倫</h4>
@@ -101,8 +101,8 @@ current: index
           <span>2021/04/18</span>
         </div>
       </li>
-      <li>
-        <img src="./assets/images/home-section5-3.png" alt="">
+      <li class="customer-block">
+        <img src="./assets/images/home-section5-3.png" alt="悠悠">
         <div class="card-body">
           <div class="top">
             <h4>悠悠</h4>
@@ -111,8 +111,8 @@ current: index
           <span>2020/12/25</span>
         </div>
       </li>
-      <li>
-        <img src="./assets/images/home-section5-4.png" alt="">
+      <li class="customer-block">
+        <img src="./assets/images/home-section5-4.png" alt="Kyuan">
         <div class="card-body">
           <div class="top">
             <h4>Kyuan</h4>
@@ -126,7 +126,7 @@ current: index
 </section>
 
 <section class="contactus">
-  <div class="container-sm">
+  <div class="container">
     <h2>聯絡我們</h2>
     <p>我們相當重視您的意見，若您有任何疑問，可先參考「常見問題」，若仍有任何問題，請填妥以下資料，我們會在近期與您聯繫。</p>
     <form action="">
@@ -136,7 +136,7 @@ current: index
       </div>
       <div>
         <label for="phone">聯絡電話</label>
-        <input id="phone" type="number" placeholder="0912-345-678">
+        <input id="phone" type="tel" placeholder="0912-345-678">
       </div>
       <div>
         <label for="email">電子郵件</label>
